src/binary/wifi_mgmr_api.rs

pub type wifi_sta_basic_info_t = wifi_sta_basic_info;
pub type wifi_interface_t = *mut crate::binary::c_types::c_void;
pub type sniffer_cb_t = ::core::option::Option<
    unsafe extern "C" fn(
        env: *mut crate::binary::c_types::c_void,
        pkt: *mut u8,
        len: crate::binary::c_types::c_int,
    ),
>;
pub type scan_item_cb_t = ::core::option::Option<
    unsafe extern "C" fn(
        env: *mut wifi_mgmr_ap_item_t,
        param1: *mut u32,
        item: *mut wifi_mgmr_ap_item_t,
    ),
>;
pub type scan_complete_cb_t = ::core::option::Option<
    unsafe extern "C" fn(
        data: *mut crate::binary::c_types::c_void,
        param: *mut crate::binary::c_types::c_void,
    ),
>;
#[doc = " Power-save off"]
pub const PS_MODE_OFF: crate::binary::c_types::c_int = 0;
#[doc = " Power-save on - Normal mode"]
pub const PS_MODE_ON: crate::binary::c_types::c_int = 1;
#[doc = " Power-save on - Dynamic mode"]
pub const PS_MODE_ON_DYN: crate::binary::c_types::c_int = 2;
#[doc = " Power Save mode setting"]
pub type _bindgen_ty_1 = crate::binary::c_types::c_int;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_UNKNOWN: WIFI_STATE_ENUM_LIST = 0;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_IDLE: WIFI_STATE_ENUM_LIST = 1;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_CONNECTING: WIFI_STATE_ENUM_LIST = 2;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_CONNECTED_IP_GETTING: WIFI_STATE_ENUM_LIST = 3;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_CONNECTED_IP_GOT: WIFI_STATE_ENUM_LIST = 4;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_DISCONNECT: WIFI_STATE_ENUM_LIST = 5;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_WITH_AP_IDLE: WIFI_STATE_ENUM_LIST = 17;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_WITH_AP_CONNECTING: WIFI_STATE_ENUM_LIST = 18;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_WITH_AP_CONNECTED_IP_GETTING: WIFI_STATE_ENUM_LIST = 19;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_WITH_AP_CONNECTED_IP_GOT: WIFI_STATE_ENUM_LIST = 20;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_WITH_AP_DISCONNECT: WIFI_STATE_ENUM_LIST = 21;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_IFDOWN: WIFI_STATE_ENUM_LIST = 6;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_SNIFFER: WIFI_STATE_ENUM_LIST = 7;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_PSK_ERROR: WIFI_STATE_ENUM_LIST = 8;
pub const WIFI_STATE_ENUM_LIST_WIFI_STATE_NO_AP_FOUND: WIFI_STATE_ENUM_LIST = 9;
pub type WIFI_STATE_ENUM_LIST = crate::binary::c_types::c_int;
pub const WIFI_SCAN_DONE_EVENT_TYPE_WIFI_SCAN_DONE_EVENT_OK: WIFI_SCAN_DONE_EVENT_TYPE = 0;
pub const WIFI_SCAN_DONE_EVENT_TYPE_WIFI_SCAN_DONE_EVENT_BUSY: WIFI_SCAN_DONE_EVENT_TYPE = 1;
pub type WIFI_SCAN_DONE_EVENT_TYPE = crate::binary::c_types::c_int;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct wifi_conf {
    pub country_code: [crate::binary::c_types::c_char; 3usize],
    pub channel_nums: crate::binary::c_types::c_int,
}
pub type wifi_conf_t = wifi_conf;
extern "C" {
    pub fn wifi_mgmr_psk_cal(
        password: *mut crate::binary::c_types::c_char,
        ssid: *mut crate::binary::c_types::c_char,
        ssid_len: crate::binary::c_types::c_int,
        output: *mut crate::binary::c_types::c_char,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_drv_init(conf: *mut wifi_conf_t) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_init() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_start();
}
extern "C" {
    pub fn wifi_mgmr_start_background(conf: *mut wifi_conf_t);
}
extern "C" {
    pub fn wifi_mgmr_get_wifi_channel_conf(wifi_chan_conf: *mut wifi_conf_t);
}
extern "C" {
    pub fn wifi_mgmr_sta_enable() -> wifi_interface_t;
}
extern "C" {
    pub fn wifi_mgmr_sta_disable(interface: *mut wifi_interface_t)
        -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_mac_set(mac: *mut u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_mac_get(mac: *mut u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_ip_get(
        ip: *mut u32,
        gw: *mut u32,
        mask: *mut u32,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_ip_set(
        ip: u32,
        mask: u32,
        gw: u32,
        dns1: u32,
        dns2: u32,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_dns_get(dns1: *mut u32, dns2: *mut u32) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_ip_unset() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_connect(
        wifi_interface: *mut wifi_interface_t,
        ssid: *mut crate::binary::c_types::c_char,
        psk: *mut crate::binary::c_types::c_char,
        pmk: *mut crate::binary::c_types::c_char,
        mac: *mut u8,
        band: u8,
        freq: u16,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_disconnect() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_powersaving(
        ps: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_autoconnect_enable() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_autoconnect_disable() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sta_ssid_set(ssid: *mut crate::binary::c_types::c_char);
}
extern "C" {
    pub fn wifi_mgmr_sta_psk_set(psk: *mut crate::binary::c_types::c_char);
}
extern "C" {
    pub fn wifi_mgmr_sta_connect_ind_stat_get(
        wifi_mgmr_ind_stat: *mut wifi_mgmr_sta_connect_ind_stat_info_t,
    );
}
extern "C" {
    pub fn wifi_mgmr_ap_enable() -> wifi_interface_t;
}
extern "C" {
    pub fn wifi_mgmr_ap_mac_set(mac: *mut u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_mac_get(mac: *mut u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_ip_get(
        ip: *mut u32,
        gw: *mut u32,
        mask: *mut u32,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_stop(interface: *mut wifi_interface_t) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_start(
        interface: *mut wifi_interface_t,
        ssid: *mut crate::binary::c_types::c_char,
        hidden_ssid: crate::binary::c_types::c_int,
        passwd: *mut crate::binary::c_types::c_char,
        channel: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_sta_cnt_get(sta_cnt: *mut u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_sta_info_get(
        sta_info: *mut wifi_sta_basic_info,
        idx: u8,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_sta_delete(sta_idx: u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ap_set_gateway(
        gateway: *mut crate::binary::c_types::c_char,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sniffer_enable() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sniffer_disable() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_rate_config(config: u16) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_conf_max_sta(max_sta_supported: u8) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sniffer_register(
        env: *mut crate::binary::c_types::c_void,
        cb: sniffer_cb_t,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_sniffer_unregister(
        env: *mut crate::binary::c_types::c_void,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_state_get(
        state: *mut crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_status_code_get(
        s_code: *mut crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_rssi_get(
        rssi: *mut crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_channel_get(
        channel: *mut crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_channel_set(
        channel: crate::binary::c_types::c_int,
        use_40Mhz: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_all_ap_scan(
        ap_ary: *mut *mut wifi_mgmr_ap_item_t,
        num: *mut u32,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_scan_filter_hidden_ssid(
        filter: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_scan(
        data: *mut crate::binary::c_types::c_void,
        cb: scan_complete_cb_t,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_cfg_req(
        ops: u32,
        task: u32,
        element: u32,
        type_: u32,
        length: u32,
        buf: *mut u32,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_scan_complete_callback() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_cli_scanlist() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_cli_init() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_scan_ap(
        ssid: *mut crate::binary::c_types::c_char,
        item: *mut wifi_mgmr_ap_item_t,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_scan_ap_all(
        env: *mut wifi_mgmr_ap_item_t,
        param1: *mut u32,
        cb: scan_item_cb_t,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_raw_80211_send(
        pkt: *mut u8,
        len: crate::binary::c_types::c_int,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_set_country_code(
        country_code: *mut crate::binary::c_types::c_char,
    ) -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_ext_dump_needed() -> crate::binary::c_types::c_int;
}
extern "C" {
    pub fn wifi_mgmr_status_code_str(status_code: u16) -> *const crate::binary::c_types::c_char;
}
pub type max_align_t = f64;
#[doc = " \\brief Event"]
#[doc = ""]
#[doc = " Events trigger transitions from a state to another. Event types are defined"]
#[doc = " by the user. Any event may optionally contain a \\ref #event::data"]
#[doc = " \"payload\"."]
#[doc = ""]
#[doc = " \\sa state"]
#[doc = " \\sa transition"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct event {
    #[doc = " \\brief Type of event. Defined by user."]
    pub type_: crate::binary::c_types::c_int,
    #[doc = " \\brief Event payload."]
    #[doc = ""]
    #[doc = " How this is used is entirely up to the user. This data"]
    #[doc = " is always passed together with #type in order to make it possible to"]
    #[doc = " always cast the data correctly."]
    pub data: *mut crate::binary::c_types::c_void,
}
